<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@mipmap/menu_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_scan"
        android:icon="@mipmap/menu_scan1"
        android:title="@string/scan_with_zxing"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan2"
        android:icon="@mipmap/menu_scan2"
        android:title="@string/scan_with_firebase"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_qr_code_gen"
        android:icon="@mipmap/menu_gen_barcode"
        android:title="@string/generate_qrcode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@mipmap/menu_setting"
        android:title="@string/setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:icon="@mipmap/menu_feedback"
        android:title="@string/feedback"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_about"
        android:icon="@mipmap/menu_about"
        android:title="@string/about"
        app:showAsAction="withText" />

</menu>