<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ui.fragment.SettingFragment">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/internal_player_switch"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="15dp"
        android:text="@string/txt_player_switch"
        android:textColor="@android:color/darker_gray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_multi_lan"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawableRight="@mipmap/ic_arrow_right"
        android:padding="15dp"
        android:text="@string/txt_multi_language"
        android:textColor="@android:color/darker_gray" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/night_mode_switch"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="15dp"
        android:text="@string/night_mode"
        android:textColor="@android:color/darker_gray" />

</LinearLayout>